# python-project-50

./: .coverage  .coveragerc  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yaml
gendiff/logic/: converting.py  file_format.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_gendiff.py
